sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:7: error: identifier expected but 'while' found.
	while (swap) {
        ^